src/less/stagingBanner.less
@import 'globals.less';
@addon: 'theme';
@addontype: 'stagingbanner';
@addonelement: 'banner';
.loadAddonVariables();

.stagingBanner {
  > .ui.container {
    display: flex;
    align-items: center;
    justify-content: space-between;

    .icon {
      margin-left: 1rem;
    }
  }

  li,
  p {
    color: @bannerTextColor;
    opacity: @bannerTextOpacity;
  }
  margin-top: 0 !important;

  .close-button {
    cursor: pointer;
  }
}

.skiplinks-wrapper when (@overrideSkipLinks = true) {
  position: relative !important;
  top: 0 !important;

  a.skiplink {
    position: absolute !important;
    top: -100px !important;

    &:focus {
      top: 10px !important;
    }
  }
}

